--- a/WPFAppTemplate/WPFAppTemplate.csproj
+++ b/WPFAppTemplate/WPFAppTemplate.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Fonts\" />
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
