Adding Enums folder. Updating README.md

--- a/WPFAppTemplate/WPFAppTemplate.csproj
+++ b/WPFAppTemplate/WPFAppTemplate.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <Folder Include="Fonts\" />
     <Folder Include="Images\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
 
 </Project>
